# cpp-homeworks

./: .gitignore  README.md
homeworks/homework_2/fortune_teller/: fortune_teller.cpp
homeworks/homework_3/guessing_game/: guessing_game.cpp
homeworks/homework_4/no_strings_attached/: CMakeLists.txt  readme.md
homeworks/homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  string_split.cpp  string_split.h  string_trim.cpp  string_trim.h  string_trim_test.cpp  test_string_split.cpp  test_string_trim.cpp
